remove .env key

--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,6 @@
 
-MONGO_URL=mongodb+srv://gerardi9690:WnYUHZK75aNoUVEv@anime-app.zhvdkrt.mongodb.net/
-JWT_SEED=YukinoYukinoshita$123?!love
-PORT=3001
-NODE_ENV=dev
-# MONGO_URL_VIEJO=mongodb://localhost:27017/anime-db
+MONGO_URL=
+JWT_SEED=
+PORT=
+NODE_ENV=
+# MONGO_URL_VIEJO=
